# Irys-Tipping-dApp

./: .gitignore
.cursor/rules/: projectrule.mdc
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/content/[id]/: page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: wallet-bar.tsx
frontend/src/lib/: irys.ts
infra/: docker-compose.yml
